Fixed overflow styling issue with side nav and main content container. added custom scroll bar styling.

--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ body {
 }
 .header{
    width: 100%;
+   height: 80px;
    background-color: var(--dark-background);
    transition: background-color 1s ease-in-out;
 }
@@ -31,6 +32,7 @@ body {
    transition: background-color 1s ease-in-out;
 }
 .header-container{
+   height: 100%;
    justify-content: space-between;
    padding: 10px 30px;
 }
@@ -81,11 +83,12 @@ body {
    width: 22px;
    height: 22px;
    border-radius: 50%;
-   background-color: red;
    transition: transform 0.6s linear;
+   background: rgb(255,255,255);
+   background: radial-gradient(circle, rgba(255,255,255,1) 49%, rgba(210,210,210,1) 61%, rgba(96,96,96,1) 82%);
 }
 .dmode-box .checkbox:checked + .label .slider{
-   transform: translateX(27px);
+   transform: translateX(28px);
 }
 
 .dmode-box .color-btn{
@@ -139,11 +142,35 @@ body {
 .right-header-section .login-btn:hover{
    background-color: var(--dark-background2);
 }
+/**  START CUSTOM SCROLL BAR  **/
+/* width */
+::-webkit-scrollbar {
+   width: 8px;
+   background: #696969;
+ }
+ /* Track */
+ ::-webkit-scrollbar-track {
+   box-shadow: inset 0 0 5px #414141; 
+   /*border-radius: 4px;
+   padding: 3px;*/
+ }
+ /* Handle */
+ ::-webkit-scrollbar-thumb {
+   background: var(--dark-background);
+   border-radius: 2px;
+ }
+ /* Handle on hover */
+ ::-webkit-scrollbar-thumb:hover {
+   background: var(--hover-blue); 
+ }
+/**  END CUSTOM SCROLL BAR  **/
+
 
 /**  START SIDE MENU PANEL  **/
 .wrapper{
    display: flex;
-   height: 100%;
+   height: calc(100% - 80px);
+   overflow: hidden;
 }
 .side-panel{
    background-color: var(--dark-background2);
@@ -151,6 +178,7 @@ body {
    height: 100%;
    padding: 20px 0;
    transition: background-color 1s ease-in-out;
+   overflow: hidden;
 }
 .side-panel.light{
    background-color: var(--light-background2);
@@ -186,8 +214,11 @@ body {
 }
 .side-nav-box{
    /*background-color: green;*/
+   width: 100%;
+   height: calc(100% - 239px);
    overflow: auto;
 }
+
 .side-nav-box a{
    display: inline-block;
    text-decoration: none;
@@ -206,10 +237,11 @@ body {
 
 /**  START MAIN CONTENT AREA  **/
 .main-content-container{
-   width: calc(100% - 200px);
+   /*width: calc(100% - 200px);*/
+   width: 100%;
    background-color: grey;
-   height: 100vh;
-   overflow: hidden;
+   height: 100%;
+   overflow: auto;
    padding: 25px;
 }
 
